# meltmodel

./: .gitignore  CMakeLists.txt  INSTALL.md  Makefile  README-web.html  README-web.md  README.md  README_what_is_what.rtf  _config.yml  changes.md  closeall.c  closeall.h  contributing.html  contributing.md  degree  degree.c  discharg.c  disopt.c  disopt.h  function.h  globcor.c  globcor.h  index.html  index.md  index_alt.md  initial.c  initial.h  input.c  input.h  input.txt  install-web.html  install-web.md  install.html  install.md  makefile  meltmod.c  organization.md  params.json  radiat.c  radiat.h  (+21 more)
_bibliography/: ebal_core.bib  energy_bal.bib  refs.bib  tind_core.bib  tindex.bib
_includes/: energy_bal.bib  tindex.bib
_layouts/: default.html  front_page.html
css/: screen.css
discharge_optimize/: discharge_calc.py
doc/: INSTALL.md  changes.md
example/: input.txt  shading.txt
example/example_data/: README_EXAMPLE.rtf  README_EXAMPLE.txt  dav_climate_data.txt  dav_dem.txt  dav_slope.txt  measuredpointbalances.txt
example/example_date/: climatedischargeinput1949-2011.txt  dav_snow0.txt
example/lemon_input/: dav_aspect.txt  dav_firn.txt  dav_glacier.txt  dav_watershed.txt
grid_tools/: CMakeLists.txt  ascigrid.c  gridasci.c
input_tools/: input.yaml  input_tool.py  input_yaml.c  scratch.py
input_tools/input_yaml.o.dSYM/Contents/: Info.plist
shading/: CMakeLists.txt  shading.c
src/: CMakeLists.txt  closeall.c  closeall.h  debam.c  degree.c  detim.c  discharg.c  discharg.h  disopt.c  disopt.h  globcor.c  globcor.h  grid.c  grid.h  initial.c  initial.h  input.c  input.h  input.txt  meltmod.c  radiat.c  radiat.h  retreat.c  retreat.h  scaling.c  scaling.h  skintemperature.c  skintemperature.h  snowinput.c  snowinput.h  snowmodel.c  snowmodel.h  tindex.c  tindex.h  turbul.c  turbul.h  userfile.c  userfile.h  variab.h  variabex.h  (+2 more)
test/: CMakeLists.txt  test_00.sh
test/flat/: shading.par
test/flat/flat_dem/: flat_dem.txt  flat_glac.txt  missing.txt
test/input_tool/: json_to_degree.py
test/one_point/: onepoint_nodata.txt  onepoint_one.txt  shading.par
test/one_point/input/: onepoint_clim.txt  onepoint_clim_0.txt  onepoint_clim_24.txt  onepoint_glac.txt  onepoint_zero.txt
util/: CMakeLists.txt
util/data_gen/: gen_clim_dat.py
util/grid_tools/: CMakeLists.txt  ascigrid.c  gridasci.c
util/json_input/: json_to_degree.py
util/json_input/test/: json_test_in.json  json_test_out.txt
util/shading/: CMakeLists.txt  shading.c
util/visualization/: grid.m  grids2diff.m  inputreadgrid.m  readme_matlabfiles.rtf
util/visulization/: grid.m  grids2ontop.m  inputreadtimeseries.m  plotmodeldischarge.m  plotpointbalances.m
visulization/: grid.m  inputreadgrid.m  inputreadtimeseries.m  massbal_movie.m  plotmassbal.m  plotmodeldischarge.m
